fix(ci): ensure npm install runs in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Dependencies
+      run: npm install
+
     - name: Build React app
       run: npm run build
 
