--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,8 @@ jobs:
 
     - name: Build React app
       run: npm run build
+      env:
+        VITE_ACCESS_TOKEN: ${{ secrets.VITE_ACCESS_TOKEN }}
 
     - name: Deploy with gh-pages
       run: |
