chore: add concurrently for running scripts in parallel

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "dev-and-test": "concurrently \"npm run dev\" \"npm test\"",
     "test": "vitest",
     "preview": "vite preview",
     "predeploy": "npm run build",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^19.1.2",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.4.1",
+    "concurrently": "^9.1.2",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
