chore: ensure vitest runs in watch mode for dev-and-test script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "dev-and-test": "concurrently \"npm run dev\" \"npm test\"",
-    "test": "vitest",
+    "test": "vitest --watch",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
